2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: Zs is not what we want; we want White_Space! (HTML5
	revision 2094).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Support for image/svg+xml (HTML5 revision 2096).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: '"' and "'" at the end of attribute
	name (after another attribute) now raise parse error (HTML5
	revision 2123).  Empty unquoted attribute values are no
	longer allowed (HTML5 revision 2122).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* mkhtmlparser.pl: Support for MathML |definitionURL| attribute (HTML5
	revision 2130).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: |xml:lang| attribute value must be same
	as |lang| attribute value for HTML elements (HTML5 revision 2062
	and so on).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Error level definition for |xml_id_error|
	was missing.

	* URIChecker.pm: The end of the URL should be marked as the
	error location for an empty path error.  The position
	between the userinfo and the port components should be
	marked as the error location for an empty host error.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* URIChecker.pm: Set parameters representing where in the
	value the error occurs for errors.  Report unknown
	address format error in warning level, since address
	formats are rarely added.  Path segments starting with "/.."
	were misinterpreted as a dot-segment.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* URIChecker.pm (check_iri_reference): Requires
	|Message::DOM::DOMImplementation|.

2008-08-29  Wakaba  <wakaba@suika.fam.cx>

	* IMTChecker.pm: Updated for the new error reporting architecture.

	* ContentChecker.pm: Error levels for IMTs are added.

2008-08-17  Wakaba  <wakaba@suika.fam.cx>

	* H2H.pm (_shift_token): Support for unquoted HTML attribute
	values.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* CacheManifest.pm: Support for new style of error
	reports.
