@@ -1,7 +1,7 @@
 1..2646
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Aug 30 23:35:45 2008
-# Current time GMT:   Sat Aug 30 14:35:45 2008
+# Current time local: Sat Aug 30 23:55:19 2008
+# Current time GMT:   Sat Aug 30 14:55:19 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
