@@ -7690,27 +7690,32 @@ allow-scripts" xmlns="http://www.w3.org/1999/xhtml">x</iframe>
 <menu autosubmit="" xmlns="http://www.w3.org/1999/xhtml"/>
 #errors
 /menu;no significant content;s
+/menu/@autosubmit;attribute not defined;m
 
 #data
 <menu autosubmit="autosubmit" xmlns="http://www.w3.org/1999/xhtml"/>
 #errors
 /menu;no significant content;s
+/menu/@autosubmit;attribute not defined;m
 
 #data
 <menu autosubmit="yes" xmlns="http://www.w3.org/1999/xhtml"/>
 #errors
 /menu/@autosubmit;boolean:invalid;m
 /menu;no significant content;s
+/menu/@autosubmit;attribute not defined;m
 
 #data
 <menu autosubmit="AUTOSubmit" xmlns="http://www.w3.org/1999/xhtml"/>
 #errors
 /menu;no significant content;s
+/menu/@autosubmit;attribute not defined;m
 
 #data
 <menu autosubmit="AutoSubmit" xmlns="http://www.w3.org/1999/xhtml"/>
 #errors
 /menu;no significant content;s
+/menu/@autosubmit;attribute not defined;m
 
 #data
 <p contextmenu="" xmlns="http://www.w3.org/1999/xhtml"/>
