@@ -1,7 +1,7 @@
 1..2178
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Aug 30 23:35:00 2008
-# Current time GMT:   Sat Aug 30 14:35:00 2008
+# Current time local: Sat Aug 30 23:54:55 2008
+# Current time GMT:   Sat Aug 30 14:54:55 2008
 # Using Test.pm version 1.25
 ok 1
 ok 2
