@@ -1,7 +1,7 @@
 1..1073
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Aug 30 23:35:01 2008
-# Current time GMT:   Sat Aug 30 14:35:01 2008
+# Current time local: Sat Aug 30 23:54:56 2008
+# Current time GMT:   Sat Aug 30 14:54:56 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
