@@ -1,5 +1,9 @@
 2008-08-30  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm: @autosubmit dropped (HTML5 revision 2019).
+
+2008-08-30  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm: Use White_Space instead of Zs for date or time
 	string in content (HTML5 revision 2094).  Make "YYYY-MM-DDHH:MM" (that
 	misses a white space or "T" literal between day and hour) 
