@@ -1,5 +1,10 @@
 2008-08-30  Wakaba  <wakaba@suika.fam.cx>
 
+	* content-model-2.dat: @autosubmit dropped (HTML5
+	revision 2019).
+
+2008-08-30  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-4.dat: Some test data for <time> are added (c.f.
 	HTML5 revision 2094).
 
