@@ -1,5 +1,12 @@
 2008-08-30  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTMLTable.pm: scope=auto algorithm fix synced with the
+	spec (HTML5 revision 2093).
+	($process_row): Algorithm step numbers synced with the
+	spec (HTML5 revision 2092).
+
+2008-08-30  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTMLTable.pm: Zs is not what we want; we want White_Space! (HTML5
 	revision 2094).
 
